[package]
name = "ppebwm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11rb = { version = "0.12.0", features = [ "xkb", "randr", "allow-unsafe-code" ] }
xcb = "0.10"
xcb-util = { version = "0.4.0", features = [ "keysyms", "ewmh", "icccm" ] }
xkbcommon = { version = "0.5", features = ["x11"] }
